log/build_2026-05-16_20-43-39/obstacle_avoidance/stdout_stderr.log
running egg_info
writing ../../build/obstacle_avoidance/obstacle_avoidance.egg-info/PKG-INFO
writing dependency_links to ../../build/obstacle_avoidance/obstacle_avoidance.egg-info/dependency_links.txt
writing entry points to ../../build/obstacle_avoidance/obstacle_avoidance.egg-info/entry_points.txt
writing requirements to ../../build/obstacle_avoidance/obstacle_avoidance.egg-info/requires.txt
writing top-level names to ../../build/obstacle_avoidance/obstacle_avoidance.egg-info/top_level.txt
reading manifest file '../../build/obstacle_avoidance/obstacle_avoidance.egg-info/SOURCES.txt'
writing manifest file '../../build/obstacle_avoidance/obstacle_avoidance.egg-info/SOURCES.txt'
running build
running build_py
copying obstacle_avoidance/avoider.py -> /home/krish/ros2_ws/build/obstacle_avoidance/build/lib/obstacle_avoidance
running install
running install_lib
copying /home/krish/ros2_ws/build/obstacle_avoidance/build/lib/obstacle_avoidance/avoider.py -> /home/krish/ros2_ws/install/obstacle_avoidance/lib/python3.10/site-packages/obstacle_avoidance
byte-compiling /home/krish/ros2_ws/install/obstacle_avoidance/lib/python3.10/site-packages/obstacle_avoidance/avoider.py to avoider.cpython-310.pyc
  File "/home/krish/ros2_ws/install/obstacle_avoidance/lib/python3.10/site-packages/obstacle_avoidance/avoider.py", line 59
    twist.angular.z = 0.0:
                         ^
SyntaxError: invalid syntax

running install_data
running install_egg_info
removing '/home/krish/ros2_ws/install/obstacle_avoidance/lib/python3.10/site-packages/obstacle_avoidance-0.0.0-py3.10.egg-info' (and everything under it)
Copying ../../build/obstacle_avoidance/obstacle_avoidance.egg-info to /home/krish/ros2_ws/install/obstacle_avoidance/lib/python3.10/site-packages/obstacle_avoidance-0.0.0-py3.10.egg-info
running install_scripts
Installing avoider script to /home/krish/ros2_ws/install/obstacle_avoidance/lib/obstacle_avoidance
writing list of installed files to '/home/krish/ros2_ws/build/obstacle_avoidance/install.log'
